--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="mailto:richard@example.com" class="contact-link">skcsayma02@gmail.com</a>
+              <a href="mailto:skcsayma02@gmail.com" class="contact-link">skcsayma02@gmail.com</a>
             </div>
 
           </li>
